# FileDuper

./: ACCELERATION_COMPLETE.md  BACKUP_WIEDERHERSTELLUNG_09_10_2025.md  BACKUP_WIEDERHERSTELLUNG_ERFOLG.md  BESCHLEUNIGUNGS_DOKUMENTATION.md  BOTTLENECK_ANALYSIS_AND_FIXES.md  BUGFIX_GUI_FREEZE_ASYNC_SCANNING.md  BUGFIX_PREMATURE_SCAN_COMPLETION.md  BUILD_STATUS_FINAL.md  CACHE_PERFORMANCE_REPORT.md  CHANGES.md  CMAKE_INTEGRATION_CHECKLIST.md  CMakeCache.txt  CMakeGpuTest.txt  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt.patch  CMakeLists.txt.working  CMakeLists_Android.txt  CMakeLists_Qt5_Proxmox.txt  CMakeLists_core.txt  CMakeLists_demo.txt  CMakeLists_full.txt  CMakeLists_installer.txt  CMakeLists_minimal.txt  CMakeLists_professional.txt  CMakeLists_simple.txt  COMPLETE_FIX_SUMMARY.md  COPY_PASTE_IMPLEMENTATION_SUCCESS.md  CRASH_FIX.txt  CURL_MULTI_IMPLEMENTATION.md  CURL_MULTI_PROJECT_SUMMARY.md  CURL_MULTI_QUICKSTART.md  CURL_MULTI_README.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_README.md  DIRECTORY_TREE_NFS_SMB_INTEGRATION.md  DIVISION_BY_ZERO_FIX_REPORT.md  ECHTE_GPU_NPU_DETECTION.md  ECHTZEIT_GUI_OPTIMIERUNGEN.md  (+218 more)
.github/: copilot-instructions.md
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
FileDuper_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
FileDuper_autogen/6YEA5652QU/: moc_activityindicator.cpp  moc_activityindicator.cpp.d  moc_curlmulti_benchmark.cpp  moc_curlmulti_benchmark.cpp.d  moc_curlmultimanager.cpp  moc_curlmultimanager.cpp.d  moc_directoryselectiondialog.cpp  moc_directoryselectiondialog.cpp.d  moc_directoryselectordialog.cpp  moc_directoryselectordialog.cpp.d  moc_duplicatedeletedialog.cpp  moc_duplicatedeletedialog.cpp.d  moc_duplicateresultswidget.cpp  moc_duplicateresultswidget.cpp.d  moc_ftpclient.cpp  moc_ftpclient.cpp.d  moc_ftpdirectorydialog.cpp  moc_ftpdirectorydialog.cpp.d  moc_ftplistworker.cpp  moc_ftplistworker.cpp.d  moc_hardwarebenchmark.cpp  moc_hardwarebenchmark.cpp.d  moc_hardwarestatuswidget.cpp  moc_hardwarestatuswidget.cpp.d  moc_hashengine.cpp  moc_hashengine.cpp.d  moc_hierarchicaldialog.cpp  moc_hierarchicaldialog.cpp.d  moc_livebenchmarkmonitor.cpp  moc_livebenchmarkmonitor.cpp.d  moc_logindialog.cpp  moc_logindialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_networkdirectorydialog.cpp  moc_networkdirectorydialog.cpp.d  moc_networkrangewidget.cpp  moc_networkrangewidget.cpp.d  moc_networkscanner.cpp  moc_networkscanner.cpp.d  (+20 more)
FileDuper_autogen/include/: activityindicator.moc.d  ftpclient.moc.d
app/: proguard-rules.pro
app/src/main/java/com/enigmachat/enhanced/: MainActivity.kt
app/src/main/res/values/: themes.xml
deploy_qt5/: BUILD_ON_PROXMOX.txt  README.md  install.sh
ftp_demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ftp_demo/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
ftp_demo/FileDuper_Demo_autogen/: deps
include/: activityindicator.h  activityindicator_enhanced.h  advancedduplicatedialog.h  arp_utils.h  build.code-workspace  curlmulti_benchmark.h  curlmultimanager.h  directoryselectiondialog.h  directoryselectordialog.h  duplicatedeletedialog.h  duplicateresultswidget.h  enhanced_lan_discovery.h  enterprisedirectoryselector.h  export_discovery.h  fileduper_logging.h  ftpclient.h  ftpconnectionpool.h  ftpdeleteworker.h  ftpdirectorydialog.h  ftpdirectoryselectiondialog.h  ftplistworker.h  ftpmultimanager.h  hardwarebenchmark.h  hardwarebenchmark.h.backup  hardwaredetector.h  hardwaremonitor.h  hardwarestatuswidget.h  hashengine.h  hierarchicaldialog.h  intelligentftpclient.h  lightningscan.h  livebenchmarkmonitor.h  logindialog.h  mainwindow.h  mainwindow.h.backup  mainwindow.h.working_backup  mainwindow_broken_complex.h  mainwindow_clean.h  mainwindow_minimal.h  mainwindow_simple.h  (+32 more)
kernels/: md5_kernel.cl  sha256_kernel.cl
releases/: FileDuper-v1.0.0-linux-x64
scan_cli_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
scan_cli_autogen/6YEA5652QU/: moc_ftpclient.cpp  moc_ftpclient.cpp.d  moc_hashengine.cpp  moc_hashengine.cpp.d  moc_memorymonitor.cpp  moc_memorymonitor.cpp.d  moc_npumanager.cpp  moc_npumanager.cpp.d  moc_presetmanager.cpp  moc_presetmanager.cpp.d  moc_scanner.cpp  moc_scanner.cpp.d
scan_cli_autogen/include/: ftpclient.moc.d  scan_cli.moc  scan_cli.moc.d
simple_apk_build/: AndroidManifest.xml
simple_apk_build/res/layout/: activity_main.xml
simple_apk_build/res/values/: strings.xml
simple_apk_build/res/xml/: data_extraction_rules.xml
src/: Makefile  activityindicator.cpp  activityindicator_broken.cpp  activityindicator_clean.cpp  activityindicator_enhanced.cpp  activityindicator_old.cpp  advancedduplicatedialog.cpp.disabled  arp_utils.cpp  curlmulti_benchmark.cpp  curlmultimanager.cpp  directoryselectiondialog.cpp  directoryselectordialog.cpp  duplicatedeletedialog.cpp  duplicateresultswidget.cpp  duplicateresultswidget.cpp.backup  enhanced_lan_discovery.cpp  export_discovery.cpp  fileduper_settings.json  fix_ismountpoint.txt  ftpclient.cpp  ftpclient.cpp.backup  ftpclient_corrected.cpp  ftpclient_curl_multi.cpp  ftpclient_libcurl.cpp.disabled  ftpconnectionpool.cpp  ftpdeleteworker.cpp  ftpdirectorydialog.cpp  ftpdirectoryselectiondialog.cpp  ftplistworker.cpp  ftpmultimanager.cpp  hardwarebenchmark.cpp  hardwaremonitor.cpp  hardwarestatuswidget.cpp  hashengine.cpp  hashengine.cpp.backup  hashengine.cpp.backup_readahead  hashengine.cpp.broken  hashengine_stub.cpp  hierarchicaldialog.cpp  hierarchicaldialog_backup.cpp  (+88 more)
tools/: test_arp.cpp  test_net_utils.cpp  test_networkscanner_50.cpp  test_networkscanner_adapter.cpp  test_networkscanner_cancel.cpp  test_nfs_all.sh  test_nfs_listexports.cpp  test_nfs_listexports.sh  test_parse_local_exports.cpp
